# assignment-satispay

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-pipeline.yml
articles/draft/: 2026-04-29-borse-attesa-fed-impatto-risparmi.md  2026-04-29-inflazione-germania-aprile-2026-impatto.md  2026-04-29-risparmio-gestito-in-rosso-marzo-analisi.md
articles/published/: 2026-04-29-borse-attesa-fed-impatto-risparmi.md  2026-04-29-inflazione-germania-aprile-2026-impatto.md  2026-04-29-risparmio-gestito-in-rosso-marzo-analisi.md  2026-04-30-bce-tassi-interessi-aprile-2026-impatti-risparmi.md  2026-04-30-borse-europee-rialzo-impatto-risparmi.md  2026-04-30-taglio-accise-carburanti-piano-casa-consigli-risparmio.md  2026-05-01-borsa-tokyo-apertura-stabile-analisi.md  2026-05-01-borsa-tokyo-apertura-stabile-consigli-investimento.md  2026-05-01-caro-benzina-piano-casa-gestione-budget.md  2026-05-01-inflazione-pil-italia-proteggere-risparmi.md  2026-05-01-piano-casa-accise-benzina-risparmio.md  2026-05-02-piano-casa-benzina-impatto-risparmi.md  (+26 more)
company_sources/: bollette-pagamenti.md  bonifici-sepa.md  buoni-regalo.md  carta-satispay.md  cashback.md  donazioni.md  pagamenti-in-negozio.md  pagamenti-ricorrenti.md  pagamenti-tra-amici.md  ricarica-telefonica.md  risparmio-smart.md  salvadanaio.md
sources/: 2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json
website/: package-lock.json  package.json
(+17 files in other folders)
