[project]
name = "blog-automation"
version = "0.1.0"
description = "Automated blog generation pipeline for FinTech case study (Satispay)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "google-genai>=0.3.0",
    "chromadb>=0.5.0",
    "feedparser>=6.0.11",
    "trafilatura>=1.12.0",
    "requests>=2.32.0",
    "yake>=0.4.8",
    "textstat>=0.7.4",
    "python-frontmatter>=1.1.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "python-slugify>=8.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blog_automation"]
